--- a/views/login.ejs
+++ b/views/login.ejs
@@ -58,6 +58,21 @@
             </div>
             
             <form class="modern-form" action="/login" method="POST">
+              <!-- Flash Messages -->
+              <% if (errorMessage && errorMessage.length > 0) { %>
+                <div class="flash-message error">
+                  <i class="fas fa-exclamation-circle"></i>
+                  <%= errorMessage %>
+                </div>
+              <% } %>
+              
+              <% if (successMessage && successMessage.length > 0) { %>
+                <div class="flash-message success">
+                  <i class="fas fa-check-circle"></i>
+                  <%= successMessage %>
+                </div>
+              <% } %>
+
               <div class="form-group">
                 <label for="email" class="form-label">
                   <i class="fas fa-envelope me-2"></i>Email Address
