--- a/views/register.ejs
+++ b/views/register.ejs
@@ -50,6 +50,21 @@
               <p>Fill in your details to register your society as admin</p>
             </div>
             <form class="modern-form" action="/register" method="POST">
+              <!-- Flash Messages -->
+              <% if (errorMessage && errorMessage.length > 0) { %>
+                <div class="flash-message error">
+                  <i class="fas fa-exclamation-circle"></i>
+                  <%= errorMessage %>
+                </div>
+              <% } %>
+              
+              <% if (successMessage && successMessage.length > 0) { %>
+                <div class="flash-message success">
+                  <i class="fas fa-check-circle"></i>
+                  <%= successMessage %>
+                </div>
+              <% } %>
+
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
