--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -51,6 +51,21 @@
             </div>
             
             <form class="modern-form" action="/signup" method="POST">
+              <!-- Flash Messages -->
+              <% if (errorMessage && errorMessage.length > 0) { %>
+                <div class="flash-message error">
+                  <i class="fas fa-exclamation-circle"></i>
+                  <%= errorMessage %>
+                </div>
+              <% } %>
+              
+              <% if (successMessage && successMessage.length > 0) { %>
+                <div class="flash-message success">
+                  <i class="fas fa-check-circle"></i>
+                  <%= successMessage %>
+                </div>
+              <% } %>
+
               <div class="row">
                 <div class="col-md-6">
                   <div class="form-group">
