--- a/views/signupEdit.ejs
+++ b/views/signupEdit.ejs
@@ -1,52 +1,101 @@
-<!-- Member edit signup form  -->
 <%- include('partials/header') %>
 
-<div class="container center">
-  <div class="row">
-    <div class="col-sm-12 col-md-9 col-lg-10 center" style="max-width: 600px;float: initial;">
-      <div class="card card-profile my-6">
-        <div class="card-body" style="padding:5%; margin:5% 0; padding-top:3%;">
-          <h2 style="background-color:rgb(51, 51, 51); padding:8px; color:white; text-align:center; border-radius:1rem; font-size: 20px;">
-            New Request
-          </h2>
-          <form class="form-edit" action="/newRequest" method="POST">
-            <div class=row style="margin: 1%;">
-              <div class="col-sm-12 col-lg-12" style=" margin-top:4%"> <b> First Name :</b></div>
-              <div class="col-sm-12 col-lg-12" style=" margin-top:4px;">
-                <input name="firstName" type="tel" id="firstName" class="form-control" value="<%= user.firstName %>" autofocus required>
+<div class="main-flex-wrapper">
+  <div class="page-container">
+    <div class="container">
+      <!-- Page Header -->
+      <div class="page-heading">
+        <span><i class="fas fa-edit me-2"></i>New Request</span>
+      </div>
+
+      <!-- Form Card -->
+      <div class="content-card">
+        <div class="card-header">
+          <div class="card-title d-flex align-items-center">
+            <i class="fas fa-user-edit me-2" style="color: #3b82f6;"></i>
+            <span>Update Your Information</span>
+          </div>
+          <p class="card-description mb-0">Please update your details and resubmit for approval</p>
+        </div>
+
+        <form class="modern-form" action="/newRequest" method="POST">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="firstName" class="form-label">
+                  <i class="fas fa-user me-2"></i>First Name
+                </label>
+                <input name="firstName" type="text" id="firstName" class="form-control modern-input" 
+                       value="<%= user.firstName %>" autofocus required>
               </div>
-              <div class="col-sm-12 col-lg-12" style=" margin-top:4% "> <b> Last Name :</b></div>
-              <div class="col-sm-12 col-lg-12" style=" margin-top:4px ">
-                <input name="lastName" type="tel" id="lastName" class="form-control" value="<%= user.lastName %>" required>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="lastName" class="form-label">
+                  <i class="fas fa-user me-2"></i>Last Name
+                </label>
+                <input name="lastName" type="text" id="lastName" class="form-control modern-input" 
+                       value="<%= user.lastName %>" required>
               </div>
-              <div class="col-sm-12 col-lg-12" style=" margin-top:4% "> <b> Phone Number :</b></div>
-              <div class="col-sm-12 col-lg-12" style=" margin-top:6px ">
-                <input name="phoneNumber" type="tel" id="phoneNumber" class="form-control" value="<%= user.phoneNumber %>" required>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="phoneNumber" class="form-label">
+                  <i class="fas fa-phone me-2"></i>Phone Number
+                </label>
+                <input name="phoneNumber" type="tel" id="phoneNumber" class="form-control modern-input" 
+                       value="<%= user.phoneNumber %>" required>
               </div>
-              <div class="col-sm-12 col-lg-12" style=" margin-top:4% "> <b> Society Name :</b></div>
-              <div class="col-sm-12 col-lg-12" style=" margin-top:6px ">
-                <input name="societyName" list="societyList" id="societyName" class="form-control"  value="<%= user.societyName %>" autocomplete="off" required>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="flatNumber" class="form-label">
+                  <i class="fas fa-home me-2"></i>Flat Number
+                </label>
+                <input name="flatNumber" type="text" id="flatNumber" class="form-control modern-input" 
+                       value="<%= user.flatNumber %>" required>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="societyName" class="form-label">
+                  <i class="fas fa-building me-2"></i>Society Name
+                </label>
+                <input name="societyName" list="societyList" id="societyName" class="form-control modern-input" 
+                       value="<%= user.societyName %>" autocomplete="off" required>
                 <datalist id="societyList">
                   <% societies.forEach(society => { %>
                     <option value="<%= society.societyName %>">
                   <% }) %>
                 </datalist>
               </div>
-              <div class="col-sm-12 col-lg-12" style=" margin-top:4% "> <b> Flat Number :</b></div>
-              <div class="col-sm-12 col-lg-12" style=" margin-top:6px ">
-                <input name="flatNumber" type="tel" id="flatNumber" class="form-control" value="<%= user.flatNumber %>" required>
-              </div>
-              <div class="col-sm-12 col-lg-12" style=" margin-top:4% "> <b> House Area (sq ft) :</b></div>
-              <div class="col-sm-12 col-lg-12" style=" margin-top:6px ">
-                <input name="squareFeet" type="number" id="squareFeet" class="form-control" value="<%= user.squareFeet || '' %>" required>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="squareFeet" class="form-label">
+                  <i class="fas fa-ruler me-2"></i>House Area (sq ft)
+                </label>
+                <input name="squareFeet" type="number" id="squareFeet" class="form-control modern-input" 
+                       value="<%= user.squareFeet || '' %>" required>
               </div>
             </div>
-            <div style=" margin-top: 4%;">
-              <button type="submit" class="btn btn-primary btn-md  float-right" style="margin: 10px;">Submit</button>
-              <a href="/home" class="btn btn-danger btn-md float-right" style="margin: 10px;">Cancel</a>
-            </div>
-          </form>
-        </div>
+          </div>
+          <!-- Form Actions -->
+          <div class="form-actions d-flex gap-3 justify-content-end mt-4">
+            <a href="/home" class="btn btn-pastel-warning">
+              <i class="fas fa-times me-2"></i>Cancel
+            </a>
+            <button type="submit" class="btn btn-modern-primary">
+              <i class="fas fa-paper-plane me-2"></i>Submit Request
+            </button>
+          </div>
+        </form>
       </div>
     </div>
   </div>
